tests/spec/fail/in_map_key_non_string.aja
print(1 in {"a": 1})
